@@ -2,8 +2,8 @@ Package: teigen
 Type: Package
 Title: Model-Based Clustering and Classification with the Multivariate
         t Distribution
-Version: 2.1.1
-Date: 2016-09-10
+Version: 2.2.0
+Date: 2016-12-06
 Author: Jeffrey L. Andrews, Jaymeson R. Wickins, Nicholas M. Boers, Paul D. McNicholas
 Maintainer: Jeffrey L. Andrews <jeff.andrews@ubc.ca>
 Description: Fits mixtures of multivariate t-distributions (with eigen-decomposed covariance structure) via the expectation conditional-maximization algorithm under a clustering or classification paradigm.
@@ -11,6 +11,6 @@ License: GPL (>= 2)
 LazyLoad: yes
 Imports: parallel
 NeedsCompilation: yes
-Packaged: 2016-09-11 02:44:44 UTC; jeff
+Packaged: 2016-12-06 22:34:54 UTC; jeff
 Repository: CRAN
-Date/Publication: 2016-09-11 13:14:45
+Date/Publication: 2016-12-07 08:44:00
