@@ -1,15 +1,16 @@
-46c31287bef331f11e07120babf2a2a7 *ChangeLog
-2a956b77304def17d2640a97349f24db *DESCRIPTION
-36515b608091b7bcff0d2f2745308033 *NAMESPACE
-7133a8669b49d62bc2da790102dacefa *R/teigen.R
+02cda4851829b59be64c565ff4890f84 *ChangeLog
+7b69c18853d6ed9aa1f3a3a7143b79e3 *DESCRIPTION
+af200c4d148a05712251cbfd26333bfd *NAMESPACE
+9e937acde2fa825595fb53945bf705de *R/teigen.R
 0b563a754f710721e02cc1a712d5ecec *data/ckd.RData
 9d3ac5d5f80f2f6e7704035dd192f7dc *inst/CITATION
 834505db59f2580cfeb5f4ee12057050 *man/ckd.Rd
 f9997637174715c051db6d683320f866 *man/plot.teigen.Rd
+655a57f012a3dcacef4e9716e14c8fd0 *man/predict.teigen.Rd
 1ee84d08792218608f204f6ed10347b9 *man/print.teigen.Rd
 5d4a212a9ed70217448ccc8d7b4f596f *man/summary.teigen.Rd
-0c61973d2fa23a33bcefadb168678d80 *man/teigen-package.Rd
-fb40af0b6e8f945ab413306ad5000953 *man/teigen.Rd
+4d90e11d3924d9d65645502498b48411 *man/teigen-package.Rd
+d946e1a7eb81a0bfd8dce3ff42a7a116 *man/teigen.Rd
 af56dcdf406e20f91cdef26bff65e1fd *src/covwt.c
 4bbcb799f868242299eaab2ec6f2d532 *src/maha.c
 ca75d1d9454751edb7f801cc07605e75 *src/teigen.c
