@@ -4,6 +4,7 @@ S3method(plot, teigen)
 S3method(summary, teigen)
 S3method(print, summary.teigen)
 S3method(print, teigen)
+S3method(predict, teigen)
 useDynLib(teigen, mymaha)
 useDynLib(teigen, mycovwt)
 importFrom("grDevices", "rainbow", "rgb", "adjustcolor", "dev.off")
